--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-dev@googlegroups.com>
+Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
+XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Laurent Bigonville <bigon@debian.org>, Sjoerd Simons <sjoerd@debian.org>
 Standards-Version: 3.9.4
 Build-Depends: autotools-dev,
@@ -18,8 +19,8 @@ Build-Depends: autotools-dev,
                dh-autoreconf,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.7.3),
-               gsettings-desktop-schemas-dev (>= 3.9.91),
+               gnome-settings-daemon-dev (>= 3.11.0),
+               gsettings-desktop-schemas-dev (>= 3.11.0),
                gtk-doc-tools,
                intltool (>= 0.37.1),
                libcanberra-gtk3-dev,
@@ -36,7 +37,7 @@ Build-Depends: autotools-dev,
                libgnome-menu-3-dev,
                libgnomekbd-dev (>= 2.91.91),
                libibus-1.0-dev (>= 1.5.2),
-               libgoa-1.0-dev (>= 3.9.90),
+               libgoa-1.0-dev (>= 3.11.0),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.11.1),
                libgtop2-dev,
