--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,8 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-dev@googlegroups.com>
+Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
+XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Standards-Version: 3.9.4
 Build-Depends: autotools-dev,
@@ -13,8 +14,8 @@ Build-Depends: autotools-dev,
                dh-autoreconf,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.7.3),
-               gsettings-desktop-schemas-dev (>= 3.9.91),
+               gnome-settings-daemon-dev (>= 3.11.0),
+               gsettings-desktop-schemas-dev (>= 3.11.0),
                gtk-doc-tools,
                intltool (>= 0.37.1),
                libcanberra-gtk3-dev,
