--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,10 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
+Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Laurent Bigonville <bigon@debian.org>, Sjoerd Simons <sjoerd@debian.org>
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Build-Depends: autotools-dev,
                cdbs (>= 0.4.41),
                debhelper (>= 8),
@@ -19,8 +19,8 @@ Build-Depends: autotools-dev,
                dh-autoreconf,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.11.0),
-               gsettings-desktop-schemas-dev (>= 3.11.0),
+               gnome-settings-daemon-dev (>= 3.7.3),
+               gsettings-desktop-schemas-dev (>= 3.9.91),
                gtk-doc-tools,
                intltool (>= 0.37.1),
                libcanberra-gtk3-dev,
@@ -36,11 +36,13 @@ Build-Depends: autotools-dev,
                libgnome-desktop-3-dev (>= 3.11.3),
                libgnome-menu-3-dev,
                libgnomekbd-dev (>= 2.91.91),
+               libgnome-bluetooth-dev (>= 3.11.1),
                libibus-1.0-dev (>= 1.5.2),
-               libgoa-1.0-dev (>= 3.11.0),
+               libgoa-1.0-dev (>= 3.9.90),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.11.1),
                libgtop2-dev,
+               libkrb5-dev,
                libnm-glib-dev (>= 0.9.8),
                libnm-glib-vpn-dev (>= 0.9.8),
                libnm-gtk-dev (>= 0.9.8),
@@ -62,7 +64,8 @@ Build-Depends: autotools-dev,
                libnm-util-dev (>= 0.9.8),
                libnm-glib-dev (>= 0.9.8),
                libmm-glib-dev,
-               shared-mime-info
+               shared-mime-info,
+               libgnome-bluetooth-dev
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
 
@@ -94,15 +97,15 @@ Recommends: cups-pk-helper,
             policykit-1-gnome,
             rygel | rygel-tracker,
             system-config-printer (>= 1.4),
-            network-manager-gnome (>= 0.9.8)
+            network-manager-gnome (>= 0.9.8),
+            libnss-myhostname
 Breaks: gnome-power-manager (<< 3.0),
         gnome-session (<< 3.0),
         libglib2.0-0 (<< 2.28.6-2),
         gnome-bluetooth (<< 3.4),
         libgnome-bluetooth8
 Replaces: gnome-bluetooth (<< 3.4)
-Suggests: gnome-screensaver | xscreensaver,
-          gstreamer1.0-pulseaudio,
+Suggests: gstreamer1.0-pulseaudio,
           libcanberra-gtk-module,
           libcanberra-gtk3-module,
           x11-xserver-utils
