--- a/debian/control.in
+++ b/debian/control.in
@@ -1,8 +1,7 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
-XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Standards-Version: 3.9.5
 Build-Depends: autotools-dev,
@@ -31,36 +30,35 @@ Build-Depends: autotools-dev,
                libgnome-desktop-3-dev (>= 3.11.3),
                libgnome-menu-3-dev,
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.11.1),
+               libgnome-bluetooth-dev (>= 3.11.1) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.9.90),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.11.1),
                libgtop2-dev,
                libkrb5-dev,
-               libnm-glib-dev (>= 0.9.8),
-               libnm-glib-vpn-dev (>= 0.9.8),
-               libnm-gtk-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
+               libnm-gtk-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7),
+               libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               network-manager-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
-               libnm-glib-dev (>= 0.9.8),
-               libmm-glib-dev,
+               network-manager-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libmm-glib-dev [linux-any],
                shared-mime-info,
-               libgnome-bluetooth-dev
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
 
@@ -79,7 +77,7 @@ Depends: ${misc:Depends},
          gnome-icon-theme-symbolic (>= 3.7),
          gnome-menus (>= 3.7.90),
          gnome-settings-daemon (>= 3.7.91),
-         gsettings-desktop-schemas (>= 3.3.91),
+         gsettings-desktop-schemas (>= 3.9.91),
 Recommends: cups-pk-helper,
             gnome-online-accounts,
             gnome-user-guide,
@@ -93,7 +91,8 @@ Recommends: cups-pk-helper,
             rygel | rygel-tracker,
             system-config-printer (>= 1.4),
             network-manager-gnome (>= 0.9.8),
-            libnss-myhostname
+            libnss-myhostname,
+            realmd
 Breaks: gnome-power-manager (<< 3.0),
         gnome-session (<< 3.0),
         libglib2.0-0 (<< 2.28.6-2),
