--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,7 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Standards-Version: 3.9.5
 Build-Depends: autotools-dev,
@@ -14,7 +14,7 @@ Build-Depends: autotools-dev,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.7.3),
-               gsettings-desktop-schemas-dev (>= 3.9.91),
+               gsettings-desktop-schemas-dev (>= 3.13.91),
                gtk-doc-tools,
                intltool (>= 0.37.1),
                libcanberra-gtk3-dev,
@@ -28,36 +28,35 @@ Build-Depends: autotools-dev,
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.37.7),
                libgnome-desktop-3-dev (>= 3.11.3),
-               libgnome-menu-3-dev,
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.11.1),
+               libgnome-bluetooth-dev (>= 3.11.1) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.9.90),
                libgrilo-0.2-dev (>= 0.2.6),
-               libgtk-3-dev (>= 3.11.1),
+               libgtk-3-dev (>= 3.13.0),
                libgtop2-dev,
                libkrb5-dev,
-               libnm-glib-dev (>= 0.9.8),
-               libnm-glib-vpn-dev (>= 0.9.8),
-               libnm-gtk-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
+               libnm-gtk-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7),
+               libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               network-manager-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
-               libnm-glib-dev (>= 0.9.8),
-               libmm-glib-dev,
+               network-manager-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libmm-glib-dev [linux-any],
                shared-mime-info,
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
@@ -75,9 +74,8 @@ Depends: ${misc:Depends},
          gnome-desktop3-data,
          gnome-icon-theme (>= 3.7),
          gnome-icon-theme-symbolic (>= 3.7),
-         gnome-menus (>= 3.7.90),
-         gnome-settings-daemon (>= 3.7.91),
-         gsettings-desktop-schemas (>= 3.9.91),
+         gnome-settings-daemon (>= 3.13.91),
+         gsettings-desktop-schemas (>= 3.13.91),
 Recommends: cups-pk-helper,
             gnome-online-accounts,
             gnome-user-guide,
@@ -86,7 +84,6 @@ Recommends: cups-pk-helper,
             iso-codes,
             mesa-utils,
             mousetweaks,
-            ntp,
             policykit-1-gnome,
             rygel | rygel-tracker,
             system-config-printer (>= 1.4),
