--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-Dev@googlegroups.com>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Sjoerd Simons <sjoerd@debian.org>
-Standards-Version: 3.9.5
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>, Sjoerd Simons <sjoerd@debian.org>
+Standards-Version: 3.9.6
 Build-Depends: autotools-dev,
                cdbs (>= 0.4.41),
                debhelper (>= 8),
