--- a/debian/control
+++ b/debian/control
@@ -5,20 +5,21 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>, Sjoerd Simons <sjoerd@debian.org>
+Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
+XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>
 Standards-Version: 3.9.6
 Build-Depends: autotools-dev,
                cdbs (>= 0.4.41),
-               debhelper (>= 8),
+               debhelper (>= 9),
                dpkg-dev (>= 1.16.1~),
-               libaccountsservice-dev (>= 0.6.30),
+               libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
                dh-autoreconf,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.7.3),
-               gsettings-desktop-schemas-dev (>= 3.13.91),
+               gsettings-desktop-schemas-dev (>= 3.15.4),
                gtk-doc-tools,
                intltool (>= 0.37.1),
                libcanberra-gtk3-dev,
@@ -33,23 +34,25 @@ Build-Depends: autotools-dev,
                libglib2.0-dev (>= 2.37.7),
                libgnome-desktop-3-dev (>= 3.11.3),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.11.1),
+               libgnome-bluetooth-dev (>= 3.3.4),
+               libgudev-1.0-dev,
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.9.90),
                libgrilo-0.2-dev (>= 0.2.6),
-               libgtk-3-dev (>= 3.13.0),
+               libgtk-3-dev (>= 3.15.0),
                libgtop2-dev,
                libkrb5-dev,
                libnm-glib-dev (>= 0.9.8),
                libnm-glib-vpn-dev (>= 0.9.8),
                libnm-gtk-dev (>= 0.9.8),
                libnm-util-dev (>= 0.9.8),
+               libmm-glib-dev,
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
-               libsmbclient-dev (>= 2:3.6.12-1),
-               libupower-glib-dev (>= 0.99.0),
+               libsmbclient-dev (>= 2:3.6.12),
+               libupower-glib-dev (>= 0.99),
                libwacom-dev (>= 0.7),
                libxi-dev (>= 2:1.2),
                libx11-dev,
@@ -58,15 +61,15 @@ Build-Depends: autotools-dev,
                libxml2-dev,
                locales,
                network-manager-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
-               libnm-glib-dev (>= 0.9.8),
-               libmm-glib-dev,
                shared-mime-info,
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
-Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
+               fonts-aurulent-sans,
+               libgl1-mesa-dev,
+               valac (>= 0.20.0),
+Vcs-Bzr: http://code.launchpad.net/~ubuntu-desktop/gnome-control-center/ubuntu
 
 Package: gnome-control-center
 Architecture: any
+Section: gnome
 Depends: ${misc:Depends},
          ${shlibs:Depends},
          accountsservice,
@@ -81,27 +84,26 @@ Depends: ${misc:Depends},
          gnome-settings-daemon (>= 3.13.91),
          gsettings-desktop-schemas (>= 3.13.91),
 Recommends: cups-pk-helper,
-            gnome-online-accounts,
-            gnome-user-guide,
+            gnome-control-center-shared-data,
+#            gnome-session-bin,
             gnome-user-share,
             gkbd-capplet,
+            ibus (>= 1.5.0),
             iso-codes,
-            mesa-utils,
+            libcanberra-pulse,
             mousetweaks,
             policykit-1-gnome,
-            rygel | rygel-tracker,
-            system-config-printer (>= 1.4),
-            network-manager-gnome (>= 0.9.8),
-            libnss-myhostname,
+            system-config-printer-gnome,
             cracklib-runtime,
-            realmd
+            ubuntu-system-service,
 Breaks: gnome-power-manager (<< 3.0),
         gnome-session (<< 3.0),
         libglib2.0-0 (<< 2.28.6-2),
         gnome-bluetooth (<< 3.4),
-        libgnome-bluetooth8
-Replaces: gnome-bluetooth (<< 3.4)
-Suggests: gstreamer1.0-pulseaudio,
+Replaces: gnome-bluetooth (<< 3.4.0)
+Suggests: gnome-screensaver | xscreensaver,
+          gnome-user-guide | ubuntu-docs,
+          gstreamer0.10-pulseaudio,
           libcanberra-gtk-module,
           libcanberra-gtk3-module,
           x11-xserver-utils
@@ -123,6 +125,7 @@ Description: utilities to configure the GNOME desktop
 
 Package: gnome-control-center-data
 Architecture: all
+Section: gnome
 Depends: ${misc:Depends}
 Recommends: gnome-control-center (>= ${source:Version})
 Provides: capplets-data
@@ -142,3 +145,29 @@ Breaks: gdm (<< 3.0),
 Description: configuration applets for GNOME - data files
  This package contains data files (icons, pixmaps, locales files) needed by
  the configuration applets in the gnome-control-center package.
+
+Package: gnome-control-center-shared-data
+Architecture: all
+Section: gnome
+Depends: ${misc:Depends}
+Replaces: gnome-control-center-data (<< 1:3.6.3-0ubuntu54)
+Conflicts: gnome-control-center-data (<< 1:3.6.3-0ubuntu54)
+Description: configuration applets for GNOME - shared data
+ This package contains datas that are used by gnome-control-center and the
+ new unity-control-center
+
+Package: libgnome-control-center-dev
+Architecture: any
+Section: libdevel
+Depends: ${misc:Depends},
+         libgnome-control-center1 (= ${binary:Version})
+Description: utilities to configure the GNOME desktop
+ This package contains the files needed to build Control Center panels
+
+Package: libgnome-control-center1
+Architecture: any
+Section: libs
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
+Description: utilities to configure the GNOME desktop
+ This package contains the library used by Control Center panels
