--- a/debian/control
+++ b/debian/control
@@ -7,11 +7,11 @@ Section: gnome
 Priority: optional
 Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
 Standards-Version: 3.9.6
 Build-Depends: autotools-dev,
                cdbs (>= 0.4.41),
-               debhelper (>= 9),
+               debhelper (>= 8),
                dpkg-dev (>= 1.16.1~),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
@@ -34,25 +34,24 @@ Build-Depends: autotools-dev,
                libglib2.0-dev (>= 2.37.7),
                libgnome-desktop-3-dev (>= 3.11.3),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.3.4),
-               libgudev-1.0-dev,
+               libgnome-bluetooth-dev (>= 3.11.1),
                libibus-1.0-dev (>= 1.5.2),
-               libgoa-1.0-dev (>= 3.9.90),
+               libgoa-1.0-dev (>= 3.15.1),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.15.0),
                libgtop2-dev,
+               libgudev-1.0-dev,
                libkrb5-dev,
                libnm-glib-dev (>= 0.9.8),
                libnm-glib-vpn-dev (>= 0.9.8),
                libnm-gtk-dev (>= 0.9.8),
                libnm-util-dev (>= 0.9.8),
-               libmm-glib-dev,
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
-               libsmbclient-dev (>= 2:3.6.12),
-               libupower-glib-dev (>= 0.99),
+               libsmbclient-dev (>= 2:3.6.12-1),
+               libupower-glib-dev (>= 0.99.0),
                libwacom-dev (>= 0.7),
                libxi-dev (>= 2:1.2),
                libx11-dev,
@@ -61,15 +60,16 @@ Build-Depends: autotools-dev,
                libxml2-dev,
                locales,
                network-manager-dev (>= 0.9.8),
+               libnm-util-dev (>= 0.9.8),
+               libnm-glib-dev (>= 0.9.8),
+               libmm-glib-dev,
                shared-mime-info,
                fonts-aurulent-sans,
-               libgl1-mesa-dev,
-               valac (>= 0.20.0),
-Vcs-Bzr: http://code.launchpad.net/~ubuntu-desktop/gnome-control-center/ubuntu
+Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
+Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
 
 Package: gnome-control-center
 Architecture: any
-Section: gnome
 Depends: ${misc:Depends},
          ${shlibs:Depends},
          accountsservice,
@@ -82,28 +82,29 @@ Depends: ${misc:Depends},
          gnome-icon-theme (>= 3.7),
          gnome-icon-theme-symbolic (>= 3.7),
          gnome-settings-daemon (>= 3.13.91),
-         gsettings-desktop-schemas (>= 3.13.91),
+         gsettings-desktop-schemas (>= 3.15.4),
 Recommends: cups-pk-helper,
-            gnome-control-center-shared-data,
-#            gnome-session-bin,
+            gnome-online-accounts,
+            gnome-user-guide,
             gnome-user-share,
             gkbd-capplet,
-            ibus (>= 1.5.0),
             iso-codes,
-            libcanberra-pulse,
+            mesa-utils,
             mousetweaks,
             policykit-1-gnome,
-            system-config-printer-gnome,
+            rygel | rygel-tracker,
+            system-config-printer (>= 1.4),
+            network-manager-gnome (>= 0.9.8),
+            libnss-myhostname,
             cracklib-runtime,
-            ubuntu-system-service,
+            realmd
 Breaks: gnome-power-manager (<< 3.0),
         gnome-session (<< 3.0),
         libglib2.0-0 (<< 2.28.6-2),
         gnome-bluetooth (<< 3.4),
-Replaces: gnome-bluetooth (<< 3.4.0)
-Suggests: gnome-screensaver | xscreensaver,
-          gnome-user-guide | ubuntu-docs,
-          gstreamer0.10-pulseaudio,
+        libgnome-bluetooth8
+Replaces: gnome-bluetooth (<< 3.4)
+Suggests: gstreamer1.0-pulseaudio,
           libcanberra-gtk-module,
           libcanberra-gtk3-module,
           x11-xserver-utils
@@ -125,7 +126,6 @@ Description: utilities to configure the GNOME desktop
 
 Package: gnome-control-center-data
 Architecture: all
-Section: gnome
 Depends: ${misc:Depends}
 Recommends: gnome-control-center (>= ${source:Version})
 Provides: capplets-data
@@ -145,29 +145,3 @@ Breaks: gdm (<< 3.0),
 Description: configuration applets for GNOME - data files
  This package contains data files (icons, pixmaps, locales files) needed by
  the configuration applets in the gnome-control-center package.
-
-Package: gnome-control-center-shared-data
-Architecture: all
-Section: gnome
-Depends: ${misc:Depends}
-Replaces: gnome-control-center-data (<< 1:3.6.3-0ubuntu54)
-Conflicts: gnome-control-center-data (<< 1:3.6.3-0ubuntu54)
-Description: configuration applets for GNOME - shared data
- This package contains datas that are used by gnome-control-center and the
- new unity-control-center
-
-Package: libgnome-control-center-dev
-Architecture: any
-Section: libdevel
-Depends: ${misc:Depends},
-         libgnome-control-center1 (= ${binary:Version})
-Description: utilities to configure the GNOME desktop
- This package contains the files needed to build Control Center panels
-
-Package: libgnome-control-center1
-Architecture: any
-Section: libs
-Depends: ${misc:Depends},
-         ${shlibs:Depends}
-Description: utilities to configure the GNOME desktop
- This package contains the library used by Control Center panels
