--- a/debian/control.in
+++ b/debian/control.in
@@ -1,13 +1,12 @@
 Source: gnome-control-center
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
-XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Standards-Version: 3.9.6
 Build-Depends: autotools-dev,
                cdbs (>= 0.4.41),
-               debhelper (>= 8),
+               debhelper (>= 9),
                dpkg-dev (>= 1.16.1~),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
@@ -28,40 +27,38 @@ Build-Depends: autotools-dev,
                libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.37.7),
-               libgnome-desktop-3-dev (>= 3.11.3),
+               libgnome-desktop-3-dev (>= 3.17.4),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.11.1),
+               libgnome-bluetooth-dev (>= 3.17.90) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.15.1),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.15.0),
                libgtop2-dev,
-               libgudev-1.0-dev,
+               libgudev-1.0-dev [linux-any],
                libkrb5-dev,
-               libnm-glib-dev (>= 0.9.8),
-               libnm-glib-vpn-dev (>= 0.9.8),
-               libnm-gtk-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
+               libnm-gtk-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7),
+               libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               network-manager-dev (>= 0.9.8),
-               libnm-util-dev (>= 0.9.8),
-               libnm-glib-dev (>= 0.9.8),
-               libmm-glib-dev,
+               network-manager-dev (>= 0.9.8) [linux-any],
+               libnm-util-dev (>= 0.9.8) [linux-any],
+               libnm-glib-dev (>= 0.9.8) [linux-any],
+               libmm-glib-dev [linux-any],
                shared-mime-info,
-               fonts-aurulent-sans,
-               valac (>= 0.20.0),
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
 
@@ -95,12 +92,6 @@ Recommends: cups-pk-helper,
             libnss-myhostname,
             cracklib-runtime,
             realmd
-Breaks: gnome-power-manager (<< 3.0),
-        gnome-session (<< 3.0),
-        libglib2.0-0 (<< 2.28.6-2),
-        gnome-bluetooth (<< 3.4),
-        libgnome-bluetooth8
-Replaces: gnome-bluetooth (<< 3.4)
 Suggests: gstreamer1.0-pulseaudio,
           libcanberra-gtk-module,
           libcanberra-gtk3-module,
@@ -125,20 +116,8 @@ Package: gnome-control-center-data
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: gnome-control-center (>= ${source:Version})
-Provides: capplets-data
-Conflicts: capplets-data
-Replaces: capplets-data,
-          gdm (<< 3.0),
-          gdm3 (<< 3.0),
-          gnome-media-common (<< 2.91),
-          gnome-power-manager (<< 3.2),
-          gnome-settings-daemon (<< 3.0),
-          gnome-control-center (<< 1:3.7.92-2~)
-Breaks: gdm (<< 3.0),
-        gdm3 (<< 3.0),
-        gnome-power-manager (<< 3.2),
-        gnome-settings-daemon (<< 3.0),
-        gnome-control-center (<< 1:3.7.92-2~)
+Breaks: gnome-control-center (<< 1:3.7.92-2~)
+Replaces: gnome-control-center (<< 1:3.7.92-2~)
 Description: configuration applets for GNOME - data files
  This package contains data files (icons, pixmaps, locales files) needed by
  the configuration applets in the gnome-control-center package.
