--- a/debian/control.in
+++ b/debian/control.in
@@ -30,35 +30,35 @@ Build-Depends: autotools-dev,
                libglib2.0-dev (>= 2.37.7),
                libgnome-desktop-3-dev (>= 3.17.4),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.17.90) [linux-any],
+               libgnome-bluetooth-dev (>= 3.17.90),
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.15.1),
                libgrilo-0.2-dev (>= 0.2.6),
                libgtk-3-dev (>= 3.15.0),
                libgtop2-dev,
-               libgudev-1.0-dev [linux-any],
+               libgudev-1.0-dev,
                libkrb5-dev,
-               libnm-glib-dev (>= 0.9.8) [linux-any],
-               libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
-               libnm-gtk-dev (>= 0.9.8) [linux-any],
-               libnm-util-dev (>= 0.9.8) [linux-any],
+               libnm-glib-dev (>= 0.9.8),
+               libnm-glib-vpn-dev (>= 0.9.8),
+               libnm-gtk-dev (>= 0.9.8),
+               libnm-util-dev (>= 0.9.8),
                libnotify-dev (>= 0.7.3),
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7) [linux-any],
+               libwacom-dev (>= 0.7),
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               network-manager-dev (>= 0.9.8) [linux-any],
-               libnm-util-dev (>= 0.9.8) [linux-any],
-               libnm-glib-dev (>= 0.9.8) [linux-any],
-               libmm-glib-dev [linux-any],
+               network-manager-dev (>= 0.9.8),
+               libnm-util-dev (>= 0.9.8),
+               libnm-glib-dev (>= 0.9.8),
+               libmm-glib-dev,
                shared-mime-info,
                fonts-aurulent-sans,
                valac (>= 0.20.0),
