--- a/debian/control.in
+++ b/debian/control.in
@@ -49,7 +49,7 @@ Build-Depends: cdbs, debhelper (>= 10),
                libxml2-dev,
                locales,
                shared-mime-info,
-               tzdata <!nocheck>
+               tzdata
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
 Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
 
