--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends: cdbs, debhelper (>= 10),
                desktop-file-utils,
                gnome-common,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.19.1),
+               gnome-settings-daemon-dev (>= 3.23.90),
                gsettings-desktop-schemas-dev (>= 3.21.4),
                gtk-doc-tools,
                intltool (>= 0.37.1),
@@ -29,33 +29,35 @@ Build-Depends: cdbs, debhelper (>= 10),
                libglib2.0-dev (>= 2.44.0),
                libgnome-desktop-3-dev (>= 3.21.2),
                libgnomekbd-dev (>= 2.91.91),
-               libgnome-bluetooth-dev (>= 3.18.0),
+               libgnome-bluetooth-dev (>= 3.18.0) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.21.5),
                libgrilo-0.3-dev (>= 0.3.0),
                libgtk-3-dev (>= 3.22.0),
                libgtop2-dev,
-               libgudev-1.0-dev,
+               libgudev-1.0-dev [linux-any],
                libkrb5-dev,
-               libnm-dev (>= 1.2.0),
-               libnma-dev (>= 1.2.0),
-               libmm-glib-dev,
+               libnm-dev (>= 1.2.0) [linux-any],
+               libnma-dev (>= 1.2.0) [linux-any],
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
                libupower-glib-dev (>= 0.99.0),
-               libwacom-dev (>= 0.7),
+               libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
                libx11-dev,
                libxft-dev (>= 2.1.2),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
+               network-manager-dev (>= 1.2.0) [linux-any],
+               libnm-util-dev (>= 1.2.0) [linux-any],
+               libnm-glib-dev (>= 1.2.0) [linux-any],
+               libmm-glib-dev [linux-any],
                shared-mime-info,
-               tzdata
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-control-center/
-Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-control-center/
+               tzdata <!nocheck>
+Vcs-Bzr: http://code.launchpad.net/~ubuntu-desktop/gnome-control-center/ubuntu
 
 Package: gnome-control-center
 Architecture: any
@@ -68,25 +70,29 @@ Depends: ${misc:Depends},
          gnome-control-center-data (<< ${gnome:NextVersion}),
          gnome-control-center-data (>= ${source:Version}),
          gnome-desktop3-data,
-         gnome-settings-daemon (>= 3.19.1),
+         gnome-settings-daemon (>= 3.23.90),
          gsettings-desktop-schemas (>= 3.21.4),
+         network-manager-gnome (>= 0.9.8),
+         system-config-printer-common (>= 1.4),
+         ttf-ubuntu-font-family
 Recommends: cups-pk-helper,
             gnome-online-accounts,
-            gnome-user-guide,
+            ubuntu-docs,
             gnome-user-share,
             gkbd-capplet,
+            ibus,
             iso-codes,
             libcanberra-pulse,
             mousetweaks,
             policykit-1,
-            rygel | rygel-tracker,
-            system-config-printer-common (>= 1.4),
-            network-manager-gnome (>= 0.9.8),
             libnss-myhostname,
             cracklib-runtime,
             pulseaudio-module-bluetooth,
-            realmd
+            ubuntu-system-service,
+            unity-control-center-faces
 Suggests: gstreamer1.0-pulseaudio,
+          realmd,
+          rygel | rygel-tracker,
           libcanberra-gtk-module,
           libcanberra-gtk3-module,
           x11-xserver-utils
@@ -101,7 +107,6 @@ Description: utilities to configure the GNOME desktop
 
 Package: gnome-control-center-dev
 Architecture: all
-Multi-Arch: foreign
 Section: devel
 Depends: ${misc:Depends}
 Description: utilities to configure the GNOME desktop
@@ -109,8 +114,8 @@ Description: utilities to configure the GNOME desktop
 
 Package: gnome-control-center-data
 Architecture: all
-Multi-Arch: foreign
 Depends: ${misc:Depends}
+Recommends: gnome-control-center (>= ${source:Version})
 Breaks: gnome-control-center (<< 1:3.7.92-2~)
 Replaces: gnome-control-center (<< 1:3.7.92-2~)
 Description: configuration applets for GNOME - data files
